Fixed bug #50632 (filter_input() does not return default value if the variable does not exist)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@293051 c90b9560-bf6c-de11-be94-00142212c4b1